--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,16 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<p>Welcome to the chat app~</p>
+<p>Welcome to the chat app</p>
+<script src="/socket.io/socket.io.js"></script>
+<script>
+    const socket = io();
+    socket.on('connect',()=>{
+        console.log('Connect to server');
+    });
+    socket.on('disconnect',()=>{
+        console.log('Disconnect from server');
+    });
+</script>
 </body>
 </html>
