--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,6 @@
 <body>
 <p>Welcome to the chat app</p>
 <script src="/socket.io/socket.io.js"></script>
-<script>
-    const socket = io();
-    socket.on('connect',()=>{
-        console.log('Connect to server');
-    });
-    socket.on('disconnect',()=>{
-        console.log('Disconnect from server');
-    });
-</script>
+<script src="/js/index.js"></script>
 </body>
 </html>
