--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,16 @@
 </head>
 <body>
 <p>Welcome to the chat app</p>
+
+<ol id="messages">
+</ol>
+
+<form id="message-form">
+    <input type="text" name="message" placeholder="Message"/>
+    <button type="submit">Send</button>
+</form>
 <script src="/socket.io/socket.io.js"></script>
+<script src="/js/jquery-3.2.1.min.js"></script>
 <script src="/js/index.js"></script>
 </body>
 </html>
