--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
     <input type="text" name="message" placeholder="Message"/>
     <button type="submit">Send</button>
 </form>
+<button type="button" id="share-location">Share Location</button>
+
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/jquery-3.2.1.min.js"></script>
 <script src="/js/index.js"></script>
