--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,25 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body>
-<p>Welcome to the chat app</p>
+<body class="chat">
 
-<ol id="messages">
-</ol>
+<div class="chat__sidebar">
+    <h3>People</h3>
+    <div id="users"></div>
+</div>
+<div class="chat__main">
+    <ol id="messages" class="chat__messages"></ol>
+    <div class="chat__footer">
+        <form id="message-form">
+            <input type="text" name="message" placeholder="Message" autofocus autocomplete="false"/>
+            <button type="submit">Send</button>
+        </form>
+        <button type="button" id="share-location">Share location</button>
+    </div>
+</div>
 
-<form id="message-form">
-    <input type="text" name="message" placeholder="Message"/>
-    <button type="submit">Send</button>
-</form>
-<button type="button" id="share-location">Share Location</button>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/jquery-3.2.1.min.js"></script>
