--- a/public/index.html
+++ b/public/index.html
@@ -1,56 +1,29 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <title>Join | ChatApp</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
-<body class="chat">
-
-<div class="chat__sidebar">
-    <h3>People</h3>
-    <div id="users"></div>
+<body class="centered-form">
+<div class="centered-form__form">
+    <form action="/chat.html">
+        <div class="form-field">
+            <h3>Join a Chat</h3>
+        </div>
+        <div class="form-field">
+            <label>Display name</label>
+            <input type="text" name="name"/>
+        </div>
+        <div class="form-field">
+            <label>Room name</label>
+            <input type="text" name="room"/>
+        </div>
+        <div class="form-field">
+            <button>Join</button>
+        </div>
+    </form>
 </div>
-<div class="chat__main">
-    <ol id="messages" class="chat__messages"></ol>
-    <div class="chat__footer">
-        <form id="message-form">
-            <input type="text" name="message" placeholder="Message" autofocus autocomplete="false"/>
-            <button type="submit">Send</button>
-        </form>
-        <button type="button" id="share-location">Share location</button>
-    </div>
-</div>
-
-<script id="message-template" type="text/template">
-    <li class="message">
-        <div class="message__title">
-            <h4>{{from}}</h4>
-            <span>{{createAt}}</span>
-        </div>
-        <div class="message__body">
-            <p>{{text}}</p>
-        </div>
-    </li>
-</script>
-<script id="location-message-template" type="text/template">
-    <li class="message">
-        <div class="message__title">
-            <h4>{{from}}</h4>
-            <span>{{createAt}}</span>
-        </div>
-        <div class="message__body">
-            <p>
-                <a href="{{url}}" target="_blank">
-                    My current location.
-                </a>
-            </p>
-        </div>
-    </li>
-</script>
-<script src="/socket.io/socket.io.js"></script>
-<script src="/js/lib/jquery-3.2.1.min.js"></script>
-<script src="/js/lib/moment.js"></script>
-<script src="/js/lib/mustache.js"></script>
-<script src="/js/index.js"></script>
 </body>
 </html>
